
<resources>
    <string name="stuart_name">StuartApp</string>

    <string name="ssq_number">第%s期</string>

    <string name="ssq_recommend">每期推荐</string>

    <string name="demo_test_recycler">测试Recycler</string>
    <string name="demo_test_sample">测试sample</string>
    <string name="ssq_recommending">推荐中...</string>
    <string name="add_contact">添加联系人</string>
    <string name="demo_test_file">测试文件</string>
    <string name="sumbit">提交</string>
    <string name="app_description">Android drawer icon with material design animation</string>
    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>
    <string name="activity_main_left_one">第二组</string>
    <string name="menu_1">menu1</string>
    <string name="menu_2">menu2</string>
    <string name="menu_3">menu3</string>
    <string name="menu_4">menu4</string>

    <string name="two_color_bell">双色球</string>
    <string name="demo">Demo</string>
    <string name="weather">天气</string>
    <string name="only_wifi">唯一的WiFi</string>


    <string name="weather_0">晴</string>
    <string name="weather_1">多云</string>
    <string name="weather_2">阴</string>
    <string name="weather_3">阵雨</string>
    <string name="weather_4">雷阵雨</string>
    <string name="weather_5">雷阵雨伴有冰雹</string>
    <string name="weather_6">雨夹雪</string>
    <string name="weather_7">小雨</string>
    <string name="weather_8">中雨</string>
    <string name="weather_9">大雨</string>
    <string name="weather_10">暴雨</string>
    <string name="weather_11">大暴雨</string>
    <string name="weather_12">特大暴雨</string>
    <string name="weather_13">阵雪</string>
    <string name="weather_14">小雪</string>
    <string name="weather_15">中雪</string>
    <string name="weather_16">大雪</string>
    <string name="weather_17">暴雪</string>
    <string name="weather_18">雾</string>
    <string name="weather_19">冻雨</string>
    <string name="weather_20">沙尘暴</string>
    <string name="weather_21">小雨-中雨</string>
    <string name="weather_22">中雨-大雨</string>
    <string name="weather_23">大雨-暴雨</string>
    <string name="weather_24">暴雨-大暴雨</string>
    <string name="weather_25">大暴雨-特大暴雨</string>
    <string name="weather_26">小雪-中雪</string>
    <string name="weather_27">中雪-大雪</string>
    <string name="weather_28">大雪-暴雪</string>
    <string name="weather_29">浮尘</string>
    <string name="weather_30">扬沙</string>
    <string name="weather_31">强沙尘暴</string>
    <string name="weather_32">浓雾</string>
    <string name="weather_49">强浓雾</string>
    <string name="weather_53">霾</string>
    <string name="weather_54">中毒霾</string>
    <string name="weather_55">重度霾</string>
    <string name="weather_56">严重霾</string>
    <string name="weather_57">大雾</string>
    <string name="weather_58">特强浓雾</string>
    <string name="weather_99">无</string>
    <string name="weather_301">雨</string>
    <string name="weather_302">雪</string>
    <string name="load_weather">正在加载天气...</string>
    <string name="search_view_hint">城市</string>
    <string name="choose_city">选择城市</string>
    <string name="none_city">没有找到该城市</string>
    <string name="get_city_start">开始整理城市信息</string>
    <string name="get_city_finish">整理城市信息结束</string>
    <string name="city_is_not_ok">正在整理城市信息，请稍后！</string>
    <string name="no_city_del">只有一个城市时不可删除</string>
    <string name="sure_to_del">确认删除%s的天气信息？</string>
    <string name="title_activity_kotlin">KotlinActivity</string>
    <string name="kotlin">kotlin</string>
    <string name="wifi_name">WiFi名</string>
    <string name="ssid_name">WiFi密码</string>
    <string name="save_wifi">保存WiFi</string>
    <string name="none_wifi_name">空WiFi名</string>
    <string name="doit">开始截log</string>
    <string name="doit_stop">停止截log</string>
    <string name="demo_test_logcat">log</string>
    <string name="news">头条</string>
    <string name="san_guo_q">三国k</string>
    <string name="jia_kao_ti_ku">驾考图库</string>
    <string name="yes">对</string>
    <string name="no">错</string>
    <string name="answer">答案</string>
    <string name="next_question">下一题</string>
    <string name="add_contact_warning">输入的数字是添加的人数，请慎重！！！</string>
    <string name="hao_mao">号码归属地</string>
    <string name="query">查询一下</string>
    <string name="baidu_map">百度地图</string>
    <string name="emojirain">降落伞</string>
    <string name="yue_che">约车</string>

    <string name="description">没有描述</string>
    <string name="ss_erwm">Ss二维码</string>
    <string name="test_taskAffinity">测试taskAffinity</string>
  <string name="get_btc">BTC</string>
    <string name="connect_file"
            translatable="false">连接文件</string>
</resources>
