<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">


    <EditText
        android:id="@+id/wifi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:hint="@string/wifi_name"
        android:minWidth="200dp" />

    <EditText
        android:id="@+id/ssid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/wifi"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:hint="@string/ssid_name"
        android:minWidth="200dp" />


    <Button
        android:id="@+id/save_wifi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ssid"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/save_wifi" />
</RelativeLayout>